syntax = "proto3";

package Config;

option go_package = "github.com/NithishNithi/GoConfig";

service ApplicationService {
    rpc AddApplication (Application) returns (Application);
    rpc UpdateConfig(UpdateConfigRequest) returns (Config);
    rpc AddConfig(AddConfigRequest) returns(Empty);
    rpc GetConfigValue(GetConfigValueRequest)returns(GetConfigValueResponse);
}

message GetConfigValueRequest {
    string id =1;
    string key = 2;
}
message Config1 {
    string id =1 ;
    string key = 2;
    string value = 3;
}

message GetConfigValueResponse {
	repeated Config1 configs = 1;
}

message Empty {
}
message AddConfigRequest {
    string id =1 ;
    string key = 2;
    string value = 3;
}

message Application {
    string id = 1;
    string name  = 2;
    Config Config = 3;
}

message Config {
    string key = 1;
    google.protobuf.Any value = 2;
}

message UpdateConfigRequest {
    string applicationId = 1;
    string key = 2;
    string value = 3;
}


